--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,15 @@
-<h3 class="sub-header">Assignment Language Analysis</h3>
+<div class="jumbotron">
+  <h1 class="display-3">Assignment Language Analysis</h1>
+  <p class="lead">This web application serves as a tool to help teachers monitor any red flags that may come through the students' written assignments. This application uses the IBM Watson AlchemyLanguage Api for sentiment analysis.</p>
+  <hr class="m-y-2">
+  <p>After the assignment is analyzed, you will be notified with the outcome of the analysis.</p>
+</div>
+
 <div class="container">
   <div id="explanation-container">
   <form class="new-post" action='/' method="post">
-    <textarea name="post[body]" class="text" rows="15" cols="50" class="query"></textarea>
-    <input type="submit" value="Submit for Analysis" />
+    <textarea name="post[body]" class="text" rows="15" cols="50" class="query"></textarea><br/><br/>
+    <input type="submit" class="btn btn-outline-secondary btn-lg" value="Submit for Analysis" />
   </form>
   </div>
 </div>
