--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -5,11 +5,29 @@
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
+.jumbotron {
+ padding: 10px;
+}
+
+.container {
+  margin: auto;
+}
+
+#picture-container {
+  background-image: url('../images/hand_help_large.jpg');
+  background-size: cover;
+  }
+
+.little-container {
+  background-color: white;
+}
+
 
 html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+
 }
 
 /**
@@ -18,6 +36,7 @@ html {
 
 body {
   margin: 0;
+  padding: 30px;
 }
 
 /* HTML5 display definitions
